--- a/Index.html
+++ b/Index.html
@@ -62,7 +62,7 @@
             top: 0;
             left: 0;
             width: 100vw;
-            height: 80vh;
+            height: 60vh; /* Höhe auf 60% des Viewports setzen */
             object-fit: cover;
             z-index: -1;
         }
@@ -72,7 +72,7 @@
             top: 0;
             left: 0;
             width: 100vw;
-            height: 80vh;
+            height: 60vh; /* Canvas auf gleiche Höhe wie Video setzen */
             z-index: 1;
         }
 
