Update and rename Alarm.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,7 @@
 
     <main>
         <div class="image-container">
-            <img src="MelderMesser.jpg" alt="Alarmbild">
+            <img src="MelderVU.jpg" alt="Alarmbild">
         </div>
         <div class="camera-container">
             <button id="cameraButton">Status 4 Einsatzstelle erreicht
