--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>QR-Code Scanner</title>
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="Logo App.jpg" type="image/jpeg">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsQR/1.3.1/jsQR.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
     <style>
         @keyframes blaulicht {
             0% { background-color: blue; }
