--- a/Index.html
+++ b/Index.html
@@ -213,6 +213,11 @@
             }
             captureFrame();
         }
+         // Service Worker registrieren
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/sw.js')
+                .then(reg => console.log("Service Worker registriert:", reg.scope))
+                .catch(err => console.log("Service Worker Registrierung fehlgeschlagen:", err));
     </script>
 
 </body>
