--- a/Index.html
+++ b/Index.html
@@ -213,6 +213,8 @@
             }
             captureFrame();
         }
+    </script>
+    <script>
          // Service Worker registrieren
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('/sw.js')
