--- a/Index.html
+++ b/Index.html
@@ -214,13 +214,20 @@
             captureFrame();
         }
     </script>
-    <script>
-         // Service Worker registrieren
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
-                .then(reg => console.log("Service Worker registriert:", reg.scope))
-                .catch(err => console.log("Service Worker Registrierung fehlgeschlagen:", err));
-    </script>
+ <script>
+    if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+            .then((registration) => {
+                console.log('Service Worker registriert:', registration);
+            })
+            .catch((error) => {
+                console.error('Service Worker Registrierung fehlgeschlagen:', error);
+            });
+    } else {
+        console.log('Service Worker wird nicht unterstützt.');
+    }
+</script>
+
 
 </body>
 </html>
