--- a/Index.html
+++ b/Index.html
@@ -216,7 +216,7 @@
     </script>
  <script>
     if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/serviceworker.js')
+        navigator.serviceWorker.register('/service-worker.js')
             .then((registration) => {
                 console.log('Service Worker registriert:', registration);
             })
