--- a/Status4.html
+++ b/Status4.html
@@ -20,8 +20,8 @@
         <div class="text-container">
             <p>
                 <span style="font-size: 36px; display: block; margin-bottom: 25px;">VU mit 2 beteiligten PKW</span>
-                Bei Eintreffen an der Einsatzstelle sind mehrere Beteiligte Personen sichtbar<br>
-                Diese befinden sich in und um die Fahrzeuge verteilt.<br>
+                Bei Eintreffen an der Einsatzstelle sind mehrere PKW und Personen beteiligt<br>
+                <br>
                 Die Einsatzstelle ist momentan keinen weiteren Gefahren ausgesetzt und man kann die Einsatzstelle begehen.<br>
                 Weiteres Vorgehen nach eigenen Vorgaben.
             </p>
@@ -39,26 +39,26 @@
             <span class="close">×</span>
             <h2>Menü</h2>
             <ul>
-                <li><a href="patient1.html">Patient1</a></li>
-                <li><a href="patient2.html">Patient2</a></li>
-                <li><a href="patient3.html">Patient3</a></li>
-                <li><a href="patient4.html">Patient4</a></li>
-                <li><a href="patient5.html">Patient5</a></li>
-                <li><a href="patient6.html">Patient6</a></li>
-                <li><a href="patient7.html">Patient7</a></li>
-                <li><a href="patient8.html">Patient8</a></li>
-                <li><a href="patient9.html">Patient9</a></li>
-                <li><a href="patient10.html">Patient10</a></li>
-                <li><a href="patient11.html">Patient11</a></li>
-                <li><a href="patient12.html">Patient12</a></li>
-                <li><a href="patient13.html">Patient13</a></li>
-                <li><a href="patient14.html">Patient14</a></li>
-                <li><a href="patient15.html">Patient15</a></li>
-                <li><a href="patient16.html">Patient16</a></li>
-                <li><a href="patient17.html">Patient17</a></li>
-                <li><a href="patient18.html">Patient18</a></li>
-                <li><a href="patient19.html">Patient19</a></li>
-                <li><a href="patient20.html">Patient20</a></li>
+                <li><a href="/patient1.html">Patient1</a></li>
+                <li><a href="/patient2.html">Patient2</a></li>
+                <li><a href="/patient3.html">Patient3</a></li>
+                <li><a href="/patient4.html">Patient4</a></li>
+                <li><a href="/patient5.html">Patient5</a></li>
+                <li><a href="/patient6.html">Patient6</a></li>
+                <li><a href="/patient7.html">Patient7</a></li>
+                <li><a href="/patient8.html">Patient8</a></li>
+                <li><a href="/patient9.html">Patient9</a></li>
+                <li><a href="/patient10.html">Patient10</a></li>
+                <li><a href="/patient11.html">Patient11</a></li>
+                <li><a href="/patient12.html">Patient12</a></li>
+                <li><a href="/patient13.html">Patient13</a></li>
+                <li><a href="/patient14.html">Patient14</a></li>
+                <li><a href="/patient15.html">Patient15</a></li>
+                <li><a href="/patient16.html">Patient16</a></li>
+                <li><a href="/patient17.html">Patient17</a></li>
+                <li><a href="/patient18.html">Patient18</a></li>
+                <li><a href="/patient19.html">Patient19</a></li>
+                <li><a href="/patient20.html">Patient20</a></li>
                 <li><a href="Einstellungen.html">Einstellungen</a></li>
                 <li><a href="#about">Über uns</a></li>
             </ul>
