--- a/patient1.html
+++ b/patient1.html
@@ -195,7 +195,7 @@
     }
 
     function redirectToIndex() {
-        window.location.href = "index.html";
+        window.location.href = "status4.html";
     }
 
     document.getElementById("btn1").addEventListener("click", function () {
