--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
         #menuModal {
             display: none;
             position: absolute;
-            top: 30;
+            top: 30px;
             left: 0;
             width: 30%;
             height: 30%;
@@ -135,7 +135,7 @@
             <span class="close">&times;</span>
             <h2>Menü</h2>
             <ul>
-                <li><a href="/patient1.html">Patient1</a></li>
+                <li><a href="https://1rettungsmittel.netlify.app/patient1.html">Patient1</a></li>
                 <li><a href="/patient2.html">Patient2</a></li>
                 <li><a href="/patient3.html">Patient3</a></li>
                 <li><a href="/patient4.html">Patient4</a></li>
