--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
         #menuModal {
             display: none;
             position: absolute;
-            top: 30px;
+            top: 30;
             left: 0;
             width: 30%;
             height: 30%;
