--- a/patient1.html
+++ b/patient1.html
@@ -164,7 +164,7 @@
 </div>
 
 <!-- Einsatzabbruch-Button -->
-<a href="/Status4.html" id="einsatzabbruchButton">Einsatzabbruch</a>
+<a href="/status4.html" id="einsatzabbruchButton">Einsatzabbruch</a>
 
 <script>
     let countdownIntervals = {};
@@ -195,7 +195,7 @@
     }
 
     function redirectToIndex() {
-        window.location.href = "Status4.html";
+        window.location.href = "/status4.html";
     }
 
     document.getElementById("btn1").addEventListener("click", function () {
