--- a/Patient5.html
+++ b/Patient5.html
@@ -165,8 +165,14 @@
     </div>
 </div>
 
-<!-- Einsatzabbruch-Button -->
-<a href="index.html" id="einsatzabbruchButton">Einsatzabbruch</a>
+<button id="einsatzabbruchButton">Einsatzabbruch</button>
+
+<script>
+    document.getElementById("einsatzabbruchButton").addEventListener("click", function () {
+        window.location.href = "/status4.html";
+    });
+</script>
+
 
 <script>
     let countdownIntervals = {};
@@ -197,7 +203,7 @@
     }
 
     function redirectToIndex() {
-        window.location.href = "index.html";
+        window.location.href = "/status4.html";
     }
 
     document.getElementById("btn1").addEventListener("click", function () {
