--- a/Status4.html
+++ b/Status4.html
@@ -72,6 +72,13 @@
         window.location.href = "/status4.html";
     });
 </script>
+    <button id="zurueckButton">Zurück zur Startseite</button>
+
+<script>
+    document.getElementById("zurueckButton").addEventListener("click", function () {
+        window.location.href = "/index.html";
+    });
+</script>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
